--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 <div align="left">
 &nbsp;
 </div>
-<p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp; "I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
+<p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;"I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
 
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk"> University of Leeds</a>, UK </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow, <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, <a href="http://www.leeds.ac.uk"> University of Leeds</a>, UK </p>
 
 <!-- p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p -->
 
@@ -105,7 +105,7 @@
 <!-- p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (BJ):&nbsp; Room G504, New Main Building, No.37,Xueyuan Rd.,Haidian District,Beijing, China, 100191.&nbsp;</p-->
 
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Email: renyu.yang1 AT gmail DOT com   or &nbsp; </p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: renyu.yang1 AT gmail DOT com   or &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;  renyu.yang AT edgetic DOT com  or &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;  r.yang1 AT leeds DOT ac DOT uk  &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp;&nbsp;
@@ -126,7 +126,7 @@
 </table>
 </a> 
 
-<p class="Bolder">&nbsp;&nbsp;&nbsp;  What's New </p>
+<p class="Bolder">&nbsp;&nbsp; &nbsp;  What's New </p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (25/01/2020) Our paper 
 "Orchestrating Development Lifecycle of ML-Based IoT Applications" has been accepted to publish in ACM Computing Surveys (CSUR) 2020. 
@@ -142,11 +142,11 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ No news is good news...Check more previous events in <a href="news.html"> old events</a>. </span></p>
 
 
-<p class="Bolder">&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I am currently a research fellow - funded by UK EPSRC grant - with the school of computing, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China and a visiting scientist at <a href="http://edgetic.com">Edgetic Ltd.</a>, a startup tech company based in UK. We are presently working on employing intelligent software encompassing distributed scheduling, machine learning, hardware-software modeling, etc.to reshape the future of data center efficiency. 
+<p class="Bolder">&nbsp;&nbsp; &nbsp; Short Bio &nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I am currently a research fellow, funded by UK EPSRC grant, with the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China and a visiting scientist at <a href="http://edgetic.com">Edgetic Ltd.</a>, a UK-based startup tech company, that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
 Previously, I led several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
 1) scalable and intelligent resource scheduling at Internet scale; 
-2) dependable service provisioning by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
+2) system dependability by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
 3) improved system utility for resource management through resource over-subscription mechanism and multi-objective optimization, etc.; 
 and 4) geo-distributed data processing, etc. 
 I has published more than 40 peer-reviewed papers in the field of distributed systems, cloud computing and big data analytics. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
@@ -155,27 +155,27 @@ I has published more than 40 peer-reviewed papers in the field of distributed sy
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively.  I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
 </span></p>
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests </span></p>
+<p><span class="Bolder">&nbsp;&nbsp; &nbsp; Research Interests </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems of big data, cloud computing and IoT </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Play distributed systems to improve the efficiency and reliability for adapting to ever-changing environments: resource management, resource scheduling, fault tolerance, dependability etc. </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Play with data: system profiling, log analysis and applied machine learning </span></p>
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Education </span></p>
+<p><span class="Bolder">&nbsp;&nbsp; &nbsp; Education </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2007.9-2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Dr. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2007.9 - 2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Dr. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2011.9-2017.1: &nbsp;&nbsp; PhD. Computer Science (with Honor), Supervised by Prof. Jie Xu, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2011.9 - 2017.1: &nbsp;&nbsp; PhD. Computer Science (with Honor), Supervised by Prof. Jie Xu, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2012.10-2013.1, 2013.12 and 2016.3: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2012.10 - 2013.1, 2013.12 and 2016.3: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Academia & Industry Experience  </span></p>
+<p><span class="Bolder">&nbsp;&nbsp; &nbsp; Academia & Industry Experience  </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2010.4-2017.2: &nbsp; Teaching and Research Assistant, Team Leader, SIGRS and MSDS, Beihang University, Beijing, China &nbsp;&nbsp; </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2011.9 - 2017.2: &nbsp; Teaching and Research Assistant, Team Leader, SIGRS and MSDS, Beihang University, Beijing, China &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2014.2-2016.2: &nbsp;&nbsp; Co-op/ R&D Intern (Mentored by Mr. <a href = "https://www.linkedin.com/in/zhuo-zhang-24913433">Zhuo Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b">Chao Li</a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2014.2 - 2016.2: &nbsp;&nbsp; Co-op/ R&D Intern (Mentored by Mr. <a href = "https://www.linkedin.com/in/zhuo-zhang-24913433">Zhuo Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b">Chao Li</a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2016.4-2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2016.4 - 2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2017.3 - 2018.3: &nbsp;&nbsp; Research Scientist and Project Director, Big Data and Brain Computing Research Center (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
  
@@ -183,7 +183,7 @@ I has published more than 40 peer-reviewed papers in the field of distributed sy
  
 
 
-<p><span class="Bolder"> &nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p>
+<p><span class="Bolder"> &nbsp;&nbsp; &nbsp; Selected Publications &nbsp; </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
 Highlight: TPDS(2), TKDE(1), TSC(2), VLDB(1), ICDCS(1), DSN(1), LISA(1), SoCC(1), CSUR(1), etc. </span></p>
@@ -218,7 +218,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 </span></p> 
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Selected Research Grants </span></p>
+<p><span class="Bolder">&nbsp;&nbsp; &nbsp; Selected Research Grants </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
 I have the opportunity to work closely with many institutes around the world and participate in many government/industry funded research projects to solve real-world problems with innovative cloud and analytic technologies.</span></p>
@@ -247,7 +247,7 @@ I have the opportunity to work closely with many institutes around the world and
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Nature Science Foundation of China (91118008, 90818028, 6117029 4)</span></p>
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; MSDS Research Team </span></p>
+<p><span class="Bolder">&nbsp;&nbsp; &nbsp; MSDS Research Team </span></p>
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
@@ -272,22 +272,22 @@ I have been supervising and working closely with many students mainly from COLAB
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
 I have been collaborating closely with many brilliant researchers around the world. </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> team -l collaborator </strong> </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Dr. Ismael Solis Moreno (now at IBM Research), Dr. Peter Garraghan (now Lecturer at Lancaster University),
-Dr. Zhenyu Wen (now Postdoc at Newcastle University), Dr. Xue Ouyang (now assistant professor at NUDT) </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Tao Lin (EPFL), Dr. Lei Cui (now associate professor at CAS), Dr. Hao Peng (now assistant professor at Beihang University), Jin Ouyang (senior staff engineer at Alibaba Group), etc. </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Dr. Ismael Solis Moreno (now at IBM Research), <a href="https://esl.lancs.ac.uk/">Dr. Peter Garraghan</a> (now Lecturer at Lancaster University),
+<a href="http://www.zhenyu.info/">Dr. Zhenyu Wen</a> (now Postdoc at Newcastle University), Dr. Xue Ouyang (now assistant professor at NUDT) </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  <a href="https://tlin-tao-lin.github.io/">Tao Lin (EPFL)</a>, Dr. Lei Cui (now associate professor at CAS), <a href="https://penghao-buaa.github.io/">Dr. Hao Peng</a> (now assistant professor at Beihang University), Jin Ouyang (senior staff engineer at Alibaba Group), etc. </span></p>
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Teaching </span></p>
+<p><span class="Bolder">&nbsp;&nbsp; &nbsp; Teaching </span></p>
  
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull; Cloud Computing (CS61839, Graduate Level Course, Beihang University), Spring 2017 (Together with Prof. Chunming Hu et. al)</span></p> 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Presentations  &nbsp; </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html">~$ talks</a> </span></p>
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Professional Services </span></p>
+<p><span class="Bolder">&nbsp;&nbsp; &nbsp; Professional Services </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Some of my recent professional services can be found here: <a href="services.html">~$ services</a> </span></p>
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+<p><span class="Bolder">&nbsp;&nbsp; &nbsp; Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (中国电子学会科技进步特等奖) </p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
@@ -299,7 +299,7 @@ Dr. Zhenyu Wen (now Postdoc at Newcastle University), Dr. Xue Ouyang (now assist
 
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Misc </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+<p><span class="Bolder">&nbsp;&nbsp; &nbsp; Misc </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Outside of work, I really enjoy traditional chinese calligraphy, architectural design, cooking world wide foods, music and long-distance running.
 </span></p>
 
