--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <span class="STYLE15"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 <img src="images/uol.jpg" width="240" height="64" alt="Renyu" border="0" title="University of Leeds" /> 
 &nbsp; &nbsp; 
-<img src="images/edgetic.jpg" width="220" height="60" alt="Renyu" border="0" title="Edgetic" />
+<!--img src="images/edgetic.jpg" width="220" height="60" alt="Renyu" border="0" title="Edgetic" /-->
 &nbsp; 
 <img src="images/bdbc.png" width="240" height="57" alt="Renyu" border="0" title="BDBC" /> 
 &nbsp; 
@@ -138,11 +138,11 @@
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (10/10/2019) A recent survey study on the management of development lifecycle for ML-Based IoT Applications <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a>  </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ No news is good news...Check more previous events in <a href="news.html"> old events</a>. </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ No news is good news...Check more previous events in <a href="news.html">old events</a>. </span></p>
 
 
 <p class="Bolder">&nbsp;&nbsp; &nbsp; Short Bio &nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I am currently a research fellow, funded by UK EPSRC grant, with the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China and a visiting scientist at <a href="http://edgetic.com">Edgetic Ltd.</a>, a UK-based startup tech company, that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I am currently a research fellow, funded by UK EPSRC grant, with the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China and a visiting scientist at <a href="http://www.edgetic.com">Edgetic Ltd.</a>, a UK-based startup tech company, that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
 Previously, I led several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
 1) scalable and intelligent resource scheduling at Internet scale; 
 2) system dependability by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
@@ -151,7 +151,7 @@ and 4) geo-distributed data processing, etc.
 I has published more than 40 peer-reviewed papers in the field of distributed systems, cloud computing and big data analytics. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively.  I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
 </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp; &nbsp; Research Interests </span></p>
@@ -172,7 +172,7 @@ I has published more than 40 peer-reviewed papers in the field of distributed sy
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2011.9 - 2017.2: &nbsp; Teaching and Research Assistant, Team Leader, SIGRS and MSDS, Beihang University, Beijing, China &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2014.2 - 2016.2: &nbsp;&nbsp; Co-op/ R&D Intern (Mentored by Mr. <a href = "https://www.linkedin.com/in/zhuo-zhang-24913433">Zhuo Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b">Chao Li</a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  2014.2 - 2016.2: &nbsp;&nbsp; R&D Intern (Mentored by Mr. <a href = "https://www.linkedin.com/in/zhuo-zhang-24913433">Zhuo Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b">Chao Li</a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  2016.4 - 2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
@@ -196,13 +196,13 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. <a href="paper/tsc2016.pdf">Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover</a>. IEEE Trans. on Services Computing (TSC), 2017</span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091"> Software-Defined Fog Orchestration for IoT Services</a>. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1, 2020</span></p>
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. <a href="paper/ic2017.pdf">Fog Orchestration for IoT Services</a>. IEEE Internet Computing, 2017  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. <a href="paper/socc2019-perphon.pdf">Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference</a>. ACM Symposium on Cloud Computing (SoCC), 2019 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  <a href="paper/icdcs2018.pdf">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a>. IEEE ICDCS 2018  </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  R.Yang, X.Ouyang, Y.Chen, P.Townend, J.Xu. <a href="paper/sose2018.pdf">Intelligent Resource Scheduling: a Machine Learning Perspective</a>. IEEE SOSE 2018  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang and J.Xu. <a href="paper/vldb2014.pdf">Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale</a>. VLDB 2014</span></p>
 
@@ -225,11 +225,9 @@ I have the opportunity to work closely with many institutes around the world and
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> grants -l </strong> </span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1), funded by UK Engineering and Physical Sciences Research Council (EPSRC), Key Member, 2020.9 - </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1), funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - </span></p> 
 
-
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Server Modelling Capability (No.45904), funded by Innovate UK Programme, UKRI, Key Member, 2020.2 - 2020.9 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  Server Modelling Capability (No.45904), funded by Innovate UK Programme, UKRI, key member, 2020.2 - 2020.8 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull;  BODEN TYPE Data Centre ONE Project (European Comission’s Horizon 2020 Programme), Member, 2018.6 - 2019.12 </span></p>
 
@@ -253,10 +251,13 @@ I have the opportunity to work closely with many institutes around the world and
 I have been supervising and working closely with many students mainly from COLAB. The programmes primarily include phD/MSc research projects and MSc projects in the module COMP5200M and COMP3211. </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  PhD. students: Jianyong Zhu (2017.5- , Beihang Uni.),<a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds), Jaber Almutairi (2018.6-, Uni of Leeds), Xiaochen Sun (2019.9- , Uni of Leeds., Visiting Student from ISCAS) </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  PhD. students: Jianyong Zhu (2017.5- , Beihang Uni.), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds) </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  MSc. students: Shiqing Xue (2018.9-, Beihang Uni.) </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> team -l alumni </strong> </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, Uni. of Leeds), Xiaochen Sun (2019.9-2020.9, Uni. of Leeds, Visiting PhD. Student from ISCAS) 
+</span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Dr. Qi Shen (2017.9-2019.8, Postdoc researchers) 
 </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (M.Sc of COMP5200M, 2019.4-2019.9, Uni. of Leeds) </span></p>
@@ -277,9 +278,11 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="Bolder">&nbsp;&nbsp; &nbsp; Teaching </span></p>
  
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull; Cloud Computing (CS61839, Graduate Level Course, Beihang University), Spring 2017 (Together with Prof. Chunming Hu et. al)</span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull; Cloud Computing (CS61839, Graduate Level, Beihang University), Spring 2017 (together with Prof. Chunming Hu et. al)</span></p> 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Presentations  &nbsp; </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull; Operating Systems (XJCO2211, Undergraduate Level, University of Leeds), Autumn 2020 (together with Prof. Jie Xu)</span></p> 
+
+<p><span class="Bolder">&nbsp;&nbsp; &nbsp; Presentations  &nbsp; </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html">~$ talks</a> </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp; &nbsp; Professional Services </span></p>
@@ -287,6 +290,8 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 
 <p><span class="Bolder">&nbsp;&nbsp; &nbsp; Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>Outstanding Service Award </strong>, IEEE JCC-SOSE, 2020 </p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (中国电子学会科技进步特等奖) </p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull;   <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
@@ -304,7 +309,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Aug. 2020 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Sept. 2020 </span></p>
 
 </body>
 </html>
