--- a/publications.html
+++ b/publications.html
@@ -79,7 +79,7 @@
 	<a href="./publications.html">[years] </a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <span class="incline"> * = the correspondence author of papers with my supervised students or team members. '= equal contribution </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <span class="incline"> * = corresponding author of the paper with my supervised students or team members. '= equal contribution </span> &nbsp; &nbsp;</p>
 
 
 
