--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
 
 <p class="Bolder">&nbsp;&nbsp; &nbsp;  What's New </p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (19/10/2020) Will serve as PC member of International Joint Conferences on Artificial Intelligence 2021 (IJCAI'21). 
+</span></p>
+
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (25/01/2020) Our paper 
 "Orchestrating Development Lifecycle of ML-Based IoT Applications" has been accepted to publish in ACM Computing Surveys (CSUR) 2020. 
 </span></p>
@@ -212,7 +216,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ More publications can be found in:
 <a href="publications.html">[Complete List]</a> 
-<a href="http://www.informatik.uni-trier.de/~ley/pers/hd/y/Yang:Renyu">[My DBLP]</a>
+<a href="http://www.informatik.uni-trier.de/~ley/pers/hd/y/Yang:Renyu">[DBLP]</a>
 <a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en">[Googe Scholar]</a>
 </span></p> 
 
@@ -248,7 +252,7 @@ I have the opportunity to work closely with many institutes around the world and
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  
-I have been supervising and working closely with many students mainly from COLAB. The programmes primarily include phD/MSc research projects and MSc projects in the module COMP5200M and COMP3211. </span></p>
+I have been co-supervising and working closely with many students mainly from COLAB. The programmes primarily include phD/MSc research projects and MSc projects in the module COMP5200M and COMP3211. </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  ~$  <strong> team -l current </strong> </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull;  PhD. students: Jianyong Zhu (2017.5- , Beihang Uni.), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds) </span></p>
@@ -278,16 +282,23 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="Bolder">&nbsp;&nbsp; &nbsp; Teaching </span></p>
  
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull; Cloud Computing (CS61839, Graduate Level, Beihang University), Spring 2017 (together with Prof. Chunming Hu et. al)</span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Cloud Computing (CS61839, Graduate Level, Beihang University), Spring 2017 (together with Prof. Chunming Hu et. al)</span></p> 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  &bull; Operating Systems (XJCO2211, Undergraduate Level, University of Leeds), Autumn 2020 (together with Prof. Jie Xu)</span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Operating Systems (XJCO2211, Undergraduate Level, University of Leeds), Autumn 2020 (together with Prof. Jie Xu)</span></p> 
 
 <p><span class="Bolder">&nbsp;&nbsp; &nbsp; Presentations  &nbsp; </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html">~$ talks</a> </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html">~$ talks</a> </span></p>
 
-<p><span class="Bolder">&nbsp;&nbsp; &nbsp; Professional Services </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &bull; Some of my recent professional services can be found here: <a href="services.html">~$ services</a> </span></p>
+<p><span class="Bolder">&nbsp;&nbsp; &nbsp; Selected Professional Services </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC) 2020, 2019, etc. </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull; PC Member: IJCAI'21, ACM/IEEE UCC'18-'20,  IEEE/ACM BDCAT'16-'20, etc. </span></p>
+
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull; Journal Reviewers: IEEE TPDS, TDSC, TC, TSC, TSE, TCC, ACM CSUR, etc. </span></p> 
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&bull; More professional services can be found here: <a href="services.html">~$ services</a> </span></p>
 
 <p><span class="Bolder">&nbsp;&nbsp; &nbsp; Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
