--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
 .STYLE16 {text-align: justify; font-size: 16pt; font-family: Arial,"\6977 \4F53 "; font-style: italic; }
 .STYLE17 {text-align: justify; font-size: 12pt; font-family: Arial,"\6977 \4F53 "; font-weight: bold; }
 -->
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 25%;
+  padding: 15px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 </style>
 </head>
 <title>Renyu YANG's Homepage</title>
@@ -216,7 +232,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; ~$ More publications can be found in:
 <a href="publications.html">[Complete List]</a> 
-<a href="http://www.informatik.uni-trier.de/~ley/pers/hd/y/Yang:Renyu">[DBLP]</a>
+<a href="https://dblp.org/pid/142/7754.html">[DBLP]</a>
 <a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en">[Googe Scholar]</a>
 </span></p> 
 
@@ -317,10 +333,9 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="Bolder">&nbsp;&nbsp; &nbsp; Misc </span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Outside of work, I really enjoy traditional chinese calligraphy, architectural design, cooking world wide foods, music and long-distance running.
 </span></p>
-
+ 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Sept. 2020 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Oct. 2020 </span></p>
 
 </body>
 </html>
