--- a/presentations.html
+++ b/presentations.html
@@ -75,54 +75,87 @@
 <title>Renyu YANG's Homepage</title>
 <body>
 
-<p><span class="style10">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;Presentations &nbsp;&nbsp;&nbsp; <a href="./index.html">[home]</a> 
+
+<br>
+<!--table width="1550" height="359"-->
+<table style="width: 90%; height: auto;">
+<tbody>
+
+<tr>
+
+
+
+<td width="80" align="left" nowrap="" class="style12">
+<div align="left">
+&nbsp;
+</div>
+
+</td>
+
+
+<td align="left">
+<div align="left">
+&nbsp;
+</div>
+
+<p><span class="style10">Presentations &nbsp;&nbsp;&nbsp; <a href="./index.html">[home]</a> 
 </span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Cluster Resource Scheduling - Academic and Industrial Experience. Invited Talk, 13th Feb., 2019, Newcastle University upon Tyne, Newcastle, UK </span> &nbsp;</p>
+<p><span class="style11">&bull; Cluster Resource Scheduling - Academic and Industrial Experience. Invited Talk, 13th Feb., 2019, Newcastle University upon Tyne, Newcastle, UK </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Resource Scheduling - Dependability and Machine Learning Perspective. Invited Talk, 10th Oct., 2018, Industrial Theme, Cambridge, UK  </span> &nbsp;</p>
+<p><span class="style11">&bull; Resource Scheduling - Dependability and Machine Learning Perspective. Invited Talk, 10th Oct., 2018, Industrial Theme, Cambridge, UK  </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Kubernetes Scheduler R&D - Early Experience and Lessons Learnt from Practice. School Seminar, 10th Sep., 2018, SoC, Leeds, UK  </span> &nbsp;</p>
+<p><span class="style11">&bull; Kubernetes Scheduler R&D - Early Experience and Lessons Learnt from Practice. School Seminar, 10th Sep., 2018, SoC, Leeds, UK  </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; ROSE: Cluster Resource Scheduling via Speculative Oversubscription. IEEE ICDCS 2018, 2nd July, 2018, Vienna, Austria </span> &nbsp;</p>
+<p><span class="style11">&bull; ROSE: Cluster Resource Scheduling via Speculative Oversubscription. IEEE ICDCS 2018, 2nd July, 2018, Vienna, Austria </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Intelligent Straggler Mitigation for Datacentre Clusters. Invited Talk, 7th May, 2018, Alibaba Group, Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Intelligent Straggler Mitigation for Datacentre Clusters. Invited Talk, 7th May, 2018, Alibaba Group, Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Computing at Scale: Data-driven Approaches. Invited Talk, 1st December, 2017, Edgetic, UK </span> &nbsp;</p>
+<p><span class="style11">&bull; Computing at Scale: Data-driven Approaches. Invited Talk, 1st December, 2017, Edgetic, UK </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Big Data and High Performance Computing for Business Analytics. Seminar, May, 2017, KPMG China, Beijing, China </span> &nbsp;</p> 
+<p><span class="style11">&bull; Big Data and High Performance Computing for Business Analytics. Seminar, May, 2017, KPMG China, Beijing, China </span> &nbsp;</p> 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Resource Management for AI and IoV systems. Invited Talk, 1st February, 2017, Baidu, Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Resource Management for AI and IoV systems. Invited Talk, 1st February, 2017, Baidu, Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Computing at Scale: System Evolution Perspective. Invited Talk, 11th December, 2016, ChinaCloud and NUDT, Changsha, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Computing at Scale: System Evolution Perspective. Invited Talk, 11th December, 2016, ChinaCloud and NUDT, Changsha, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Modern Fault-Tolerant Resource Management. Invited Talk, 9th December, 2016, Amazon, Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Modern Fault-Tolerant Resource Management. Invited Talk, 9th December, 2016, Amazon, Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Distributed Scheduler Scalability and Parallelism. Tutorials, 17th Semptember,2015, Alibaba Group, Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Distributed Scheduler Scalability and Parallelism. Tutorials, 17th Semptember,2015, Alibaba Group, Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Modern Resource Management Technique and Overview. Tutorials, 20th October,2015, Alibaba Group, Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Modern Resource Management Technique and Overview. Tutorials, 20th October,2015, Alibaba Group, Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Improving Utilization through Dynamic VM Resource Allocation in Hybrid Cloud Environment. <a href="talks/20141217_ICPADS.pdf"> [slides] </a>  IEEE ICPADS 2014, 17th December, 2014, Hsinchu, Taiwan </span> &nbsp;</p>
+<p><span class="style11">&bull; Improving Utilization through Dynamic VM Resource Allocation in Hybrid Cloud Environment. <a href="talks/20141217_ICPADS.pdf"> [slides] </a>  IEEE ICPADS 2014, 17th December, 2014, Hsinchu, Taiwan </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Introduction to R and Big Data Analysis for System Profiling <a href=""> [slides] </a>  Technical Seminar, 30th October, 2014, Alibaba Cloud Computing Inc., Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Introduction to R and Big Data Analysis for System Profiling <a href=""> [slides] </a>  Technical Seminar, 30th October, 2014, Alibaba Cloud Computing Inc., Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull;  Cluster Tracelog Analysis and Implications. Invited Talk, August, 2014, MSRA, Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull;  Cluster Tracelog Analysis and Implications. Invited Talk, August, 2014, MSRA, Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Computing at Scale: System Architectural Evolution and Introduction to Fuxi <a href="talks/20140819_Tsinghua.pdf">[slides]</a>   Invited Talk, 19th August, 2014, Department of Computing, Tsinghua University, Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Computing at Scale: System Architectural Evolution and Introduction to Fuxi <a href="talks/20140819_Tsinghua.pdf">[slides]</a>   Invited Talk, 19th August, 2014, Department of Computing, Tsinghua University, Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Architectural Evolution and Challenges of Resource Management System at Scale and Its Scheduler Simulator <a href="talks/20140806_SysArch.pdf">[slides]</a>  iVCE All-Hands Meeting(iVCE-AHM), 6th August, 2014, Taobao City, Hangzhou, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Architectural Evolution and Challenges of Resource Management System at Scale and Its Scheduler Simulator <a href="talks/20140806_SysArch.pdf">[slides]</a>  iVCE All-Hands Meeting(iVCE-AHM), 6th August, 2014, Taobao City, Hangzhou, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Architectural Evolution for Data Processing and Resource Management at Scale <a href="talks/20140606_dataProcessingEvolution.pdf"></a> CCF-Forum (Internet Software: Opportunities and Challenges), 6th June, 2014, NUDT, Changsha, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Architectural Evolution for Data Processing and Resource Management at Scale <a href="talks/20140606_dataProcessingEvolution.pdf"></a> CCF-Forum (Internet Software: Opportunities and Challenges), 6th June, 2014, NUDT, Changsha, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; Survey and Case Study: Cluster Tracelog Analysis and Approaches <a href="talks/cloudcom2013-discussion.pdf"></a> Technical Seminar, 20th April, 2014, Alibaba Cloud Computing Inc., Beijing, China </span> &nbsp;</p>
+<p><span class="style11">&bull; Survey and Case Study: Cluster Tracelog Analysis and Approaches <a href="talks/cloudcom2013-discussion.pdf"></a> Technical Seminar, 20th April, 2014, Alibaba Cloud Computing Inc., Beijing, China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; An Analysis of Performance Interference Effects on Energy-Efficiency of Virtualized Cloud Environments <a href="talks/cloudcom2013-discussion.pdf">[slides]</a>  IEEE CloudCom 2013, 2nd December,2013, Bristol, UK </span> &nbsp;</p>
+<p><span class="style11">&bull; An Analysis of Performance Interference Effects on Energy-Efficiency of Virtualized Cloud Environments <a href="talks/cloudcom2013-discussion.pdf">[slides]</a>  IEEE CloudCom 2013, 2nd December,2013, Bristol, UK </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; CloudAP: Improving the QoS of Mobile Applications with Efficient VM Migration<a href="talks/20131115_HPCC_Renyu_Yang_CloudAP.pdf">[slides]</a>  IEEE HPCC 2013, 15th November,2013,Zhangjiajie,China </span> &nbsp;</p>
+<p><span class="style11">&bull; CloudAP: Improving the QoS of Mobile Applications with Efficient VM Migration<a href="talks/20131115_HPCC_Renyu_Yang_CloudAP.pdf">[slides]</a>  IEEE HPCC 2013, 15th November,2013,Zhangjiajie,China </span> &nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; An Analysis of Performance Interference Effects on Energy-Efficiency and VM placement in Virtualized Cloud Environments <a href="talks/20131016_iVCE_ATC_Renyu_Yang_Beihang.pdf">[slides] </a> iVCE All-Hands Meeting(iVCE-AHM), 16th October,2013,Changsha,China </span> &nbsp;</p>
+<p><span class="style11">&bull; An Analysis of Performance Interference Effects on Energy-Efficiency and VM placement in Virtualized Cloud Environments <a href="talks/20131016_iVCE_ATC_Renyu_Yang_Beihang.pdf">[slides] </a> iVCE All-Hands Meeting(iVCE-AHM), 16th October,2013,Changsha,China </span> &nbsp;</p>
 
+<p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="incline"> Updated by Dec. 2020 </span> &nbsp; &nbsp;</p>
+
+</p>
+</td>
+
+</tr>
+</tbody>
+</table>
+</a> 
 
 </body>
 </html>
