--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
 	font-family:Arial,"\6977 \4F53 "}
 .style11
 	{text-align:left;
-	font-size:12pt;
+	font-size:11pt;
 	font-family:Arial,"\6977 \4F53 "}
 .style12
 	{text-align:justify;
@@ -71,32 +71,67 @@
 
 <title> Renyu YANG's Services </title>
 <body>
+
+
+<br>
+<!--table width="1550" height="359"-->
+<table style="width: 85%; height: auto;">
+<tbody>
+
+<tr>
+
+
+
+<td width="80" align="left" nowrap="" class="style12">
+<div align="left">
+&nbsp;
+</div>
+
+</td>
+
+
+<td align="left">
+<div align="left">
+&nbsp;
+</div>
+
 <p><span class="Bolder">Services <a href="./index.html">[home]</a></span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> (Co-) Chair:</strong></span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE International Conference on Joint Cloud Computing (JCC), 2020 </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE JCC 2019 (in conjuction with IEEE SOSE 2019)</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) </span></p>
+<p><span class="style11"><strong> (Co-) Chair:</strong></span></p>
+<p><span class="style11">&nbsp; IEEE International Conference on Joint Cloud Computing (JCC), 2020 </span></p>
+<p><span class="style11">&nbsp; IEEE JCC 2019 (in conjuction with IEEE SOSE 2019)</span></p>
+<p><span class="style11">&nbsp;IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> PC Member:</strong></span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE ESaaSA'14 (in conjuction with IEEE CLOSER 2014)</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE IWES'14 (in conjuction with IEEE CloudCom 2014) </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE FiCloud'16 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;IEEE/ACM BDCAT'16-'20  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE/ACM UCC'18-'20 </span></p>
+<p><span class="style11"><strong> PC Member:</strong></span></p>
+<p><span class="style11">&nbsp;IEEE ESaaSA'14 (in conjuction with IEEE CLOSER 2014)</span></p>
+<p><span class="style11">&nbsp;IEEE IWES'14 (in conjuction with IEEE CloudCom 2014) </span></p>
+<p><span class="style11">&nbsp;IEEE FiCloud'16 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
+<p><span class="style11">&nbsp;IEEE/ACM BDCAT'16-'20  </span></p>
+<p><span class="style11">&nbsp; IEEE/ACM UCC'18-'20 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<strong> Conferences Organizer: </strong></span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Organizer: IEEE ISORC'12, IEEE iVCE'12, CoLaB Workshop'12,CoLaB Workshop'13, CoLaB Workshop'14</span></p>
+<p><span class="style11"><strong> Conferences Organizer: </strong></span></p>
+<p><span class="style11">&nbsp; Organizer: IEEE ISORC'12, IEEE iVCE'12, CoLaB Workshop'12,CoLaB Workshop'13, CoLaB Workshop'14</span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; <strong> Reviewer: </strong> </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS,  IEEE ISSRE, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE CCDC, etc. </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; IEEE Transactions/Journals:  IEEE Trans. on Computer(TC); IEEE Trans. on Parallel and Distributed System (TPDS); IEEE Trans. on Dependable and Secure Computing (TDSC); IEEE Trans. on Services Computing (TSC); IEEE Trans. on Software Engineering(TSE); IEEE Trans. on Reliability; IEEE Trans. on Cloud Computing (TCC); IEEE Trans. on Sustainable Computing; IEEE IoT Journal, IEEE Computer, etc.
+<p><span class="style11"><strong> Reviewer: </strong> </span></p>
+<p><span class="style11">&nbsp; IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS,  IEEE ISSRE, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE CCDC, etc. </span></p>
+<p><span class="style11">&nbsp; IEEE/ACM Transactions/Journals:  IEEE Trans. on Computer(TC); IEEE Trans. on Parallel and Distributed System (TPDS); IEEE Trans. on Dependable and Secure Computing (TDSC); IEEE Trans. on Services Computing (TSC); IEEE Trans. on Software Engineering (TSE); IEEE Trans. on Reliability; IEEE Trans. on Cloud Computing (TCC); IEEE Trans. on Sustainable Computing; Transactions on Intelligent Systems and Technology (TIST); ACM Computing Survey (CSUR); IEEE IoT Journal; IEEE Computer, etc.
 </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Other Journals like Journal of Parallel and Distributed Computing (JPDC); Future Generation Computing Systems (FGCS); ACM Computing Survey (CSUR); Journal of Computer Science and Technology (JCST);  Journal of Cloud Computing, etc. </span></p>
+<p><span class="style11">&nbsp; Other Journals like Journal of Parallel and Distributed Computing (JPDC), Future Generation Computing Systems (FGCS), Journal of Computer Science and Technology (JCST), etc. </span></p>
 
 
  
-<p>&nbsp; </p>
+<p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="incline"> Updated by Dec. 2020 </span> &nbsp; &nbsp;</p>
 
+</p>
+</td>
+
+</tr>
+</tbody>
+</table>
+</a> 
+
+</body>
+</html>
 
 
 
