--- a/index.html
+++ b/index.html
@@ -79,16 +79,15 @@
 <body>
 
 <span class="STYLE15"> 
-&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;  <strong>Renyu Yang, PhD </strong> &nbsp;&nbsp  
-<img src="icons/yin.gif" width="70" height="70" alt="Renyu" border="0" title="Renyu Yang" />  
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;  <strong>Renyu Yang</strong> &nbsp; 
+<img src="icons/yin.gif" width="50" alt="Renyu" border="0" title="Renyu Yang" />  
 </span>
 
-<span class="STYLE15"> &nbsp;&nbsp;&nbsp;&nbsp;
-<img src="images/uol.jpg" width="240" height="64" alt="Renyu" border="0" title="University of Leeds" /> 
-&nbsp; &nbsp; 
+<span class="STYLE15"> &nbsp;
+<img src="images/uol.jpg" width="160" alt="Renyu" border="0" title="University of Leeds" /> 
 <!--img src="images/edgetic.jpg" width="220" height="60" alt="Renyu" border="0" title="Edgetic" /-->
 &nbsp; 
-<img src="images/bdbc.png" width="240" height="57" alt="Renyu" border="0" title="BDBC" /> 
+<img src="images/bdbc.png" width="200" alt="Renyu" border="0" title="BDBC" /> 
 &nbsp; 
 <!--img src="images/beihang.jpg" width="240" height="65" alt="Renyu" border="0" title="BUAA" /-->
 &nbsp; 
@@ -96,12 +95,12 @@
 </span>
 
 <br>
-<table width="1250" height="180">
+<table style="width: 85%; height: auto;">
 <tbody>
 <tr>
 
 
-<td width="40" align="left" nowrap="" class="style12">
+<td width="80" align="left" nowrap="" class="style12">
 <div align="left">
 &nbsp;
 </div>
@@ -112,16 +111,20 @@
 <div align="left">
 &nbsp;
 </div>
-<p class="style11"><span class="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="images/yangry2017a.jpg" height="240" width="188"></span></p>
+<p class="style11"><span class="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="images/yangry2017a.jpg" height="242" width="188"></span></p>
 </td>
 
 <td width="796" align="right">
 <div align="left">
 &nbsp;
 </div>
-<p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;"I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
+<!--p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;"I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p-->
 
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow, <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, <a href="http://www.leeds.ac.uk"> University of Leeds</a>, UK </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow </p>
+
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a></p>
+
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
 
 <!-- p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p -->
 
@@ -134,7 +137,6 @@
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp;&nbsp;
 <a href="http://uk.linkedin.com/pub/renyu-yang/60/b5b/96/" target="_blank">
     <img src="icons/linkedin.jpg" width="30" height="30" border="0" alt="LinkedIn" title="LinkedIn"/></a>
-&nbsp;
 
 <a href="http://www.facebook.com/yang.renyu" target="_blank">
     <img src="icons/facebook.jpg" width="45" height="30" alt="Facebook" border="0" title="Facebook"/></a>
@@ -152,14 +154,15 @@
 
 
 <br>
-<table width="1550" height="359">
+<!--table width="1550" height="359"-->
+<table style="width: 85%; height: auto;">
 <tbody>
 
 <tr>
 
 
 
-<td width="40" align="left" nowrap="" class="style12">
+<td width="80" align="left" nowrap="" class="style12">
 <div align="left">
 &nbsp;
 </div>
@@ -167,7 +170,7 @@
 </td>
 
 
-<td width="750" align="left">
+<td align="left">
 <div align="left">
 &nbsp;
 </div>
@@ -193,13 +196,13 @@
 
 
 <p class="Bolder">Short Bio &nbsp;</p>
-<p><span class="style11"> I am currently a research fellow, funded by a UK EPSRC grant, with the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China and a visiting scientist at <a href="http://www.edgetic.com">Edgetic Ltd.</a>, a UK-based startup tech company, that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
-Previously, I led several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
+<p><span class="style11"> I am currently a research fellow, funded by a UK EPSRC grant, with the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. I was a research scientist at <a href="http://www.edgetic.com">Edgetic Ltd.</a>, a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
+I have been leading several China/UK national and international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
 1) scalable and intelligent resource scheduling at Internet scale; 
 2) system dependability by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
 3) improved system utility for resource management through resource over-subscription mechanism and multi-objective optimization, etc.; 
 and 4) geo-distributed data processing, etc. 
-I has published more than 40 peer-reviewed papers in the field of distributed systems, cloud computing and big data analytics. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
+I has published more than 40 peer-reviewed papers, in the field of distributed systems, cloud computing and big data analytics, which appear in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of my work won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participation and contribution to the reliable resource management and scheduling at massive scale.  
 </span></p>
 
 <p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
@@ -210,8 +213,8 @@ I has published more than 40 peer-reviewed papers in the field of distributed sy
 
 <p><span class="Bolder">Research Interests </span></p>
 <p><span class="style11">Massive-scale distributed systems of big data, cloud computing and IoT </span></p>
-<p><span class="style11">&bull;Play distributed systems to improve the efficiency and reliability for adapting to ever-changing environments: resource management, resource scheduling, fault tolerance, dependability etc. </span></p>
-<p><span class="style11">&bull;Play with data: system profiling, log analysis and applied machine learning </span></p>
+<p><span class="style11">&bull; Play distributed systems to improve the efficiency and reliability for adapting to ever-changing environments: resource management, resource scheduling, fault tolerance, dependability etc. </span></p>
+<p><span class="style11">&bull; Play with data: system profiling, log analysis and applied deep/machine learning (e.g., GNN) </span></p>
 
 
 <p><span class="Bolder">Education </span></p>
@@ -302,7 +305,7 @@ I have the opportunity to work closely with many institutes around the world and
 
 
 <p><span class="style11"> 
-I have been co-supervising and working closely with many students mainly from COLAB. The programmes primarily include phD/MSc research projects and MSc projects in the module COMP5200M and COMP3211. </span></p>
+I have been co-supervising and working closely with many students mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
 <p><span class="style11"> ~$  <strong> team -l current </strong> </span></p>
 <p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.5- , Beihang Uni.), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds), Yiming Hei (2019.9-, Beihang Uni.) </span></p>
@@ -317,15 +320,15 @@ I have been co-supervising and working closely with many students mainly from CO
 <p><span class="style11">&bull;  Shiqing Xue (2018.9-2020.12, Beihang Uni.), Dr. Qi Shen (2017.9-2019.8, Postdoc researcher, Beihang Uni.) 
 </span></p>
 
-<p><span class="style11">&bull;  Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (M.Sc of COMP5200M, 2019.4-2019.9, Uni. of Leeds) </span></p>
+<p><span class="style11">&bull;  Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (MSc of COMP5200M, 2019.4-2019.9, Uni. of Leeds) </span></p>
 
-<p><span class="style11">&bull;  Junqing Xiao (M.Sc, 2016.9-2018.12, first employment at Alibaba Group), Ximing Qu (M.Sc, 2016.9-2018.12, first employment at Alibaba Group) </span></p> 
+<p><span class="style11">&bull;  Junqing Xiao (MSc, 2016.9-2018.12, first employment at Alibaba Group), Ximing Qu (MSc, 2016.9-2018.12, first employment at Alibaba Group) </span></p> 
 
-<p><span class="style11">&bull;  Xiaoyang Sun (M.Sc, 2015.9-2018.3, PhD student at Uni. of Leeds. UK), Lian Du (M.Sc, 2015.9-2018.3, first employment at Alibaba Group), Hailun Wang (M.Sc, 2015.9-2017.3, first employment at Baidu Inc.) </span></p> 
+<p><span class="style11">&bull;  Xiaoyang Sun (MSc, 2015.9-2018.3, PhD student at Uni. of Leeds. UK), Lian Du (MSc, 2015.9-2018.3, first employment at Alibaba Group), Hailun Wang (MSc, 2015.9-2017.3, first employment at Baidu Inc.) </span></p> 
 
-<p><span class="style11">&bull;  Xixu Wang (M.Sc, 2014.9-2017.3, first employment at Baidu Inc.), Yunchang Zhao (M.Sc, 2013.9-2016.3, first employment at an Internet startup) </span></p> 
+<p><span class="style11">&bull;  Xixu Wang (MSc, 2014.9-2017.3, first employment at Baidu Inc.), Yunchang Zhao (MSc, 2013.9-2016.3, first employment at an Internet startup) </span></p> 
 
-<p><span class="style11">&bull;  <a href="https://people.cs.uchicago.edu/~michaelht/">Michael Hao Tong</a> (B.Sc, 2012.9-2014.6, PhD student at Uni. of Chicago, US), Yuda Wang (M.Sc, 2012.9-2015.3, first employment at China Telecom.) </span></p> 
+<p><span class="style11">&bull;  <a href="https://people.cs.uchicago.edu/~michaelht/">Michael Hao Tong</a> (B.Sc, 2012.9-2014.6, PhD student at Uni. of Chicago, US), Yuda Wang (MSc, 2012.9-2015.3, first employment at China Telecom.) </span></p> 
 
 <p><span class="style11">
 I have been collaborating closely with many brilliant researchers around the world. </span></p>
@@ -365,10 +368,10 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (中国电子学会科技进步特等奖) </p>
 <p><span class="style11">&bull;   <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
 <p><span class="style11">&bull;  <strong>Guanghua Scholarship Award </strong> for outstanding students, 2014 </p>
-<p><span class="style11">&bull;   <strong>&#8220;Best Paper Award&#8221;</strong> of the IEEE 11th International Symposium on Autonomous Decentralized System(ISADS), 2013 </span></p>
-<p><span class="style11">&bull;  <strong>&#8220;Excellent Academic Award&#8221;</strong> of The Institute of Advanced Computing Technology, Beihang University
+<p><span class="style11">&bull;   <strong>Best Paper Award</strong> of the IEEE 11th International Symposium on Autonomous Decentralized System(ISADS), 2013 </span></p>
+<p><span class="style11">&bull;  <strong>Excellent Academic Award</strong> of The Institute of Advanced Computing Technology, Beihang University
 </span></p> 
-<p><span class="style11">&bull;   Excellence Student Scholarship of Beihang University</span></p>
+<p><span class="style11">&bull;   <strong>Excellence Student Scholarship</strong> of Beihang University</span></p>
 
 
 
@@ -377,7 +380,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 </span></p>
  
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">  updated by Oct. 2020 </span></p>
+<p><span class="style11">  updated by Dec. 2020 </span></p>
 
 </td>
 
