--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </span>
 
 <br>
-<table style="width: 85%; height: auto;">
+<table style="width: 60%; height: auto;">
 <tbody>
 <tr>
 
@@ -107,14 +107,16 @@
 </td>
 
 
-<td width="142" align="left" nowrap="" class="style12">
+
+<td align="left" nowrap="" class="style12">
 <div align="left">
 &nbsp;
 </div>
-<p class="style11"><span class="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="images/yangry2017a.jpg" height="242" width="188"></span></p>
+<p class="style11"><span class="name"> <img src="images/yangry2017a.jpg" height="242" width="188"></span></p>
 </td>
 
-<td width="796" align="right">
+
+<td align="left">
 <div align="left">
 &nbsp;
 </div>
@@ -145,6 +147,8 @@
     <img src="icons/scholar.jpg" width="45" height="30" alt="Facebook" border="0" title="Google Scholar"/></a>
 </p>
 </td>
+
+
 
 </tr>
 </tbody>
@@ -326,7 +330,7 @@ I have been co-supervising and working closely with many students mainly from CO
 
 <p><span class="style11">&bull;  Xiaoyang Sun (MSc, 2015.9-2018.3, PhD student at Uni. of Leeds. UK), Lian Du (MSc, 2015.9-2018.3, first employment at Alibaba Group), Hailun Wang (MSc, 2015.9-2017.3, first employment at Baidu Inc.) </span></p> 
 
-<p><span class="style11">&bull;  Xixu Wang (MSc, 2014.9-2017.3, first employment at Baidu Inc.), Yunchang Zhao (MSc, 2013.9-2016.3, first employment at an Internet startup) </span></p> 
+<p><span class="style11">&bull;  Xixu Wang (MSc, 2014.9-2017.3, first employment at Baidu Inc.), Wenbo Jiang (MSc, 2013.9-2016.3, first employment at NetEase Inc.), Yunchang Zhao (MSc, 2013.9-2016.3, first employment at an Internet startup) </span></p> 
 
 <p><span class="style11">&bull;  <a href="https://people.cs.uchicago.edu/~michaelht/">Michael Hao Tong</a> (B.Sc, 2012.9-2014.6, PhD student at Uni. of Chicago, US), Yuda Wang (MSc, 2012.9-2015.3, first employment at China Telecom.) </span></p> 
 
@@ -341,13 +345,12 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="style11">&bull; Jin Ouyang, Jiamang Wang (senior staff engineer at Alibaba Group), etc. </span></p>
 
-<p><span class="Bolder">Teaching </span></p>
+<p><span class="Bolder">Teaching and Presentations </span></p>
  
 <p><span class="style11">&bull; Cloud Computing (CS61839, Graduate Level, Beihang University), Spring 2017 (together with Prof. Chunming Hu et. al)</span></p> 
 
 <p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, University of Leeds), Autumn 2020 (together with Prof. Jie Xu)</span></p> 
 
-<p><span class="Bolder">Presentations  &nbsp; </span></p>
 <p><span class="style11">&bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html">~$ talks</a> </span></p>
 
 <p><span class="Bolder">Selected Professional Services </span></p>
